* Change JDK supported version to JDK 26. * Fix some old not working previous versions code references. * Fix some code warnings and add documentation.